--- a/src/mim/plug/CMakeLists.txt
+++ b/src/mim/plug/CMakeLists.txt
@@ -17,6 +17,7 @@ set(MIM_PLUGINS
     tensor
     tuple
     vec
+    aie2p
 )
 
 list(TRANSFORM MIM_PLUGINS PREPEND "mim_internal_" OUTPUT_VARIABLE MIM_INTERNAL_PLUGINS)
